--- a/results/templates/convert.html
+++ b/results/templates/convert.html
@@ -301,7 +301,7 @@
                         </div>
                         <div
                             id="preview"
-                            class="h-full hidden flex flex-col gap-6 justify-between"
+                            class="h-full hidden flex flex-col gap-6"
                         >
                             <div class="flex flex-col gap-3">
                                 <h1 class="text-4xl font-bold">
@@ -331,7 +331,7 @@
                             </div>
                             <div
                                 id="previewBody"
-                                class="h-full mb-6 overflow-y-scroll"
+                                class="max-h-[275px] mb-6 overflow-y-scroll"
                             ></div>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
                             </button>
                             <button
                                 id="download"
-                                class="hidden bg-primaryPurple p-2 rounded-md flex items-center gap-1 text-white text-2xl"
+                                class="hidden bg-primaryPurple p-2 rounded-md flex items-center gap-1 text-white text-2xl disabled:bg-gray disabled:cursor-not-allowed"
                             >
                                 Download
                                 <img
