--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -52,7 +52,7 @@
             >
                 {% csrf_token %}
                 <h1 class="text-black text-2xl md:text-3xl font-bold">
-                    Welcome to the University Resulty!
+                    Welcome to the University Resultly!
                 </h1>
                 <span>
                     <p class="text-black">
