--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
-        <title>Document</title>
+        <title>Resultly</title>
     </head>
 
     <script>
@@ -52,7 +52,7 @@
             >
                 {% csrf_token %}
                 <h1 class="text-black text-2xl md:text-3xl font-bold">
-                    Welcome to the University Resultly!
+                    Welcome to Resultly!
                 </h1>
                 <span>
                     <p class="text-black">
