--- a/results/templates/convert.html
+++ b/results/templates/convert.html
@@ -249,8 +249,8 @@
                                 class="flex flex-col gap-4 custom-select"
                                 id="format-type"
                             >
-                                <option value="Faculty">Faculty</option>
-                                <option value="Management">Management</option>
+                                <option value="Faculty Wise">Faculty Wise</option>
+                                <option value="Class Wise">Class Wise</option>
                             </select>
                         </div>
                         <div
