--- a/results/templates/convert.html
+++ b/results/templates/convert.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Result CSV Normalization</title>
+        <title>Resultly</title>
 
         <script defer src="{% static 'logic.js' %}"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
